--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,42 @@
 :root {
-  --family-gotham: 'Gotham Pro';
-  --family-agressive: 'AGRESSIVE';
-  --color-black: #000000;
-  --color-white: #FFFFFF;
+    --family-inter: 'Inter';
+    --color-black: #222222;
+    --color-white: #FFFFFF;
+    --color-main: #356875;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: local('Inter Bold'), local('Inter-Bold'),
+        url('../fonts/Inter-Bold.woff2') format('woff2'),
+        url('../fonts/Inter-Bold.woff') format('woff'),
+        url('../fonts/Inter-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: local('Inter Medium'), local('Inter-Medium'),
+        url('../fonts/Inter-Medium.woff2') format('woff2'),
+        url('../fonts/Inter-Medium.woff') format('woff'),
+        url('../fonts/Inter-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: local('Inter Regular'), local('Inter-Regular'),
+        url('../fonts/Inter-Regular.woff2') format('woff2'),
+        url('../fonts/Inter-Regular.woff') format('woff'),
+        url('../fonts/Inter-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+body {
+    font-family: var(--family-inter);
 }
 
 .btn {
@@ -11,24 +45,84 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    font-size: 12px;
+    line-height: 14px;
+}
+
+.bg_main {
+    background: var(--color-main);
+
+    color: var(--color-white);
+
+    font-weight: 700;
+}
+
+._border {
+    border: 1px solid var(--color-main);
+
+    color: var(--color-main);
+
+    background: none;
+
+    font-weight: 500;
+}
+
+._border._inversion {
+    border: 1px solid var(--color-white);
+
+    color: var(--color-white);
+
+    background: none;
+}
+
+.color_text {
+    color: var(--color-main);
+}
+
+.input {
+    width: 100%;
+
+    border: none;
 }
 
 .input {}
 
 .section {}
 
-.section__upper {}
-
-.section__title {}
-
-.container {
-  padding: 0 16px;
+.section__upper {
+    padding: 40px 0 20px;
 }
 
-.header__container {
+.section__title {
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 700;
+    color: var(--color-black);
+    text-align: center;
+}
+
+.container {
+    padding: 0 20px;
+}
+
+.header {
+    /* position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2; */
+
+    width: 100%;
+
+    background: var(--color-black);
+}
+
+.header-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    padding: 18px 0;
 }
 
 .burger {
@@ -45,9 +139,11 @@
     width: 100%;
     height: 2px;
 
-    background: var(--color-black);
+    background: var(--color-white);
 
     display: block;
+
+    transition: all .4s;
 }
 
 .burger__line.line_1 {
@@ -55,9 +151,768 @@
 }
 
 .burger__line.line_2 {
-    top: 4px;
+    top: 7px;
 }
 
 .burger__line.line_3 {
-    top: 8px;
+    top: 14px;
+}
+
+.header-logo {
+    display: flex;
+}
+
+.header-logo__img {
+    max-width: 69px;
+}
+
+.header-container__flex {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.header-info {
+    display: flex;
+    align-items: center;
+    gap: 19px;
+}
+
+.header-info__text {
+    display: block;
+
+    font-size: 8px;
+    line-height: 10px;
+    font-weight: 400;
+    color: var(--color-white);
+
+    text-align: right;
+}
+
+.header-info__texts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.header-info__text-icon+span {
+    display: none;
+}
+
+.header-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    height: 40px;
+
+    text-transform: uppercase;
+}
+
+.header-button.mob_hide {
+    display: none;
+}
+
+.header-menu {
+    position: fixed;
+    left: -100%;
+    top: 57px;
+
+    width: 100%;
+
+    background: var(--color-black);
+
+    padding: 30px 20px 14px;
+
+    transition: all .4s;
+}
+
+.header-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.header-nav__link {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-white);
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+
+    padding: 0 0 30px;
+
+    border-bottom: 1px solid var(--color-white);
+
+    width: 100%;
+}
+
+.header-nav__link:last-child {
+    border: none;
+}
+
+.header.active {
+    background: var(--color-black);
+}
+
+.header.active .header-menu {
+    left: 0;
+}
+
+.header.active .burger__line.line_1 {
+    top: 7px;
+
+    transform: rotate(45deg);
+}
+
+.header.active .burger__line.line_2 {
+    opacity: 0;
+}
+
+.header.active .burger__line.line_3 {
+    top: 7px;
+
+    transform: rotate(-45deg);
+}
+
+.header-logo__text {
+    display: none;
+}
+
+/**************************/
+
+
+/********* $MAIN-BANNER *********/
+
+.main-banner {
+    position: relative;
+
+    aspect-ratio: 360/420;
+
+    padding: 27px 0 0;
+}
+
+.main-banner__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    object-fit: cover;
+}
+
+.main-banner__container {
+    position: relative;
+    z-index: 1;
+}
+
+.main-banner__title {
+    font-size: 36px;
+    line-height: 38px;
+    font-weight: 700;
+    color: var(--color-white);
+
+    margin-bottom: 40px;
+}
+
+.main-banner__sub-title {
+    display: block;
+
+    font-size: 24px;
+    line-height: 26px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+/**************************/
+
+
+/********* $TIME-BLOCK *********/
+
+.time-block {
+    padding: 20px 0 14px;
+}
+
+.time-block__timer-head {
+    display: block;
+
+    font-size: 15px;
+    line-height: 17px;
+    font-weight: 700;
+    color: var(--color-white);
+    text-align: center;
+
+    margin-bottom: 15px;
+}
+
+.timer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.time-count__val {
+    font-size: 28px;
+    line-height: 30px;
+    font-weight: 400;
+    color: var(--color-white);
+
+    padding: 3px;
+
+    position: relative;
+
+    z-index: 1;
+}
+
+.time-count__val::before {
+    content: "";
+
+    display: block;
+
+    width: 50%;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    z-index: -1;
+
+    backdrop-filter: blur(9.41px);
+    background: rgba(255, 255, 255, 0.15);
+}
+
+.time-count__val::after {
+    content: "";
+
+    display: block;
+
+    width: 50%;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    z-index: -1;
+
+    backdrop-filter: blur(9.41px);
+    background: rgba(255, 255, 255, 0.15);
+}
+
+.time-count__text {
+    display: block;
+
+    font-size: 10px;
+    line-height: 12px;
+    font-weight: 400;
+    color: var(--color-white);
+    text-align: center;
+}
+
+.time-count__item {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+
+    width: 40px;
+}
+
+.time-block__button {
+    height: 40px;
+
+    margin-top: 19px;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+}
+
+/**************************/
+
+
+/********* $MODELS *********/
+
+.models-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.model-names__button {
+    display: block;
+
+    margin: 20px auto 0;
+
+    background: none;
+
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    color: var(--color-black);
+    text-decoration: underline;
+}
+
+.models-list__item {
+    text-align: center;
+
+    border: 1px solid var(--color-main);
+
+    height: 26px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: all .4s;
+}
+
+.models-list__link {
+    font-size: 12px;
+    line-height: 14px;
+    font-weight: 400;
+    color: var(--color-black);
+    text-decoration: none;
+
+    transition: all .4s;
+}
+
+.models-cards {
+    margin-top: 40px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.model-card {
+    padding: 7px 20px 14px;
+
+    position: relative;
+
+    border: 1px solid var(--color-black);
+}
+
+.model-card__bg {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.model-card__head {
+    display: block;
+
+    font-size: 20px;
+    line-height: 22px;
+    font-weight: 700;
+    color: var(--color-main);
+    text-transform: uppercase;
+
+    margin-bottom: 11px;
+}
+
+.model-card__head.mob_hide {
+    display: none;
+}
+
+.model-card__car-img,
+.model-card__real-img {
+    width: 100%;
+}
+
+.model-card__car {
+    margin-bottom: 11px;
+}
+
+.model-card__real {
+    margin-bottom: 16px;
+}
+
+.model-card__colors {
+    width: 140px;
+
+    margin: 0 auto 25px;
+}
+
+.model-card__color {
+    display: block;
+
+    width: 20px;
+    height: 20px;
+}
+
+.model-card__prices {
+    margin-bottom: 25px;
+}
+
+.model-card__price-old {
+    display: block;
+
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 400;
+    color: rgba(34, 34, 34, 0.5);
+
+    margin-bottom: 5px;
+}
+
+.model-card__price {
+    display: block;
+
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 700;
+    color: var(--color-black);
+
+    margin-bottom: 5px;
+}
+
+.model-card__price-month {
+    display: block;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-black);
+}
+
+.model-card__actions {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 14px;
+    column-gap: 18px;
+
+    margin-bottom: 20px;
+}
+
+.model-card__actions-item {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+}
+
+.model-card__actions-text {
+    display: block;
+
+    font-size: 9px;
+    line-height: 11px;
+    font-weight: 400;
+    color: var(--color-black);
+}
+
+.model-card__btns {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.model-card__button {
+    height: 40px;
+}
+
+/**************************/
+
+
+/********* $EQUIPS *********/
+
+.equips {
+    overflow-x: hidden;
+}
+
+.equips__filter {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    margin-bottom: 20px;
+}
+
+.select2-container--default .select2-selection--single {
+    border: none;
+    border-radius: 0;
+
+    border-bottom: 1px solid var(--color-black);
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-black);
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    width: 24px;
+    height: 24px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow b {
+    border: none;
+
+    width: 24px;
+    height: 24px;
+
+    background: url(../img/arrow-select.svg)no-repeat;
+
+    top: 0;
+    left: 0;
+}
+
+.select2-search--dropdown {
+    display: none;
+}
+
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable {
+    background-color: var(--color-red);
+}
+
+.equips-list {
+    margin-top: 20px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.equips-card__top {
+    background: var(--color-black);
+
+    padding: 10px 0;
+
+    position: relative;
+
+    margin-bottom: 18px;
+}
+
+.equips-card__top::before {
+    content: "";
+
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    left: -100%;
+    top: 0;
+
+    background: var(--color-black);
+}
+
+.equips-card__top::after {
+    content: "";
+
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    right: -100%;
+    top: 0;
+
+    background: var(--color-black);
+}
+
+.equips-card__head {
+    display: block;
+
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+    color: var(--color-white);
+}
+
+.equips-card__info-texts {
+    display: none;
+}
+
+.equips-card__specs {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.equips-card__specs-item svg {
+    display: none;
+}
+
+.equips-card__specs-item {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: var(--color-black);
+}
+
+.equips-card__specs-item.mob_hide {
+    display: none;
+}
+
+.equips-card__info {
+    margin-bottom: 16px;
+}
+
+.equips-card__images {
+    display: flex;
+    justify-content: center;
+
+    margin-bottom: 16px;
+}
+
+.equips-card__img {
+    display: block;
+
+    width: 100%;
+}
+
+.equips-card__prices {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 16px;
+    margin-bottom: 16px;
+}
+
+.equips-card__price-old {
+    display: block;
+
+    flex-basis: 100%;
+
+    text-align: center;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: var(--color-main);
+    text-decoration: line-through;
+}
+
+.equips-card__price {
+    display: block;
+
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 700;
+    color: var(--color-main);
+}
+
+.equips-card__price-month {
+    display: block;
+
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: var(--color-main);
+}
+
+.equips-card__btns {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    width: 280px;
+
+    margin: 0 auto;
+}
+
+.equips-card__button {
+    height: 50px;
+}
+
+/**************************/
+
+
+/********* $CONTACTS *********/
+
+.contacts {
+    margin-top: 40px;
+}
+
+.contacts__map {
+    width: 100%;
+}
+
+.contacts__bg {
+    background: var(--color-main);
+
+    padding: 19px 0 23px;
+}
+
+.contacts__title {
+    font-size: 24px;
+    line-height: 26px;
+    font-weight: 700;
+    color: var(--color-white);
+
+    margin-bottom: 20px;
+}
+
+.contacts__list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    margin-bottom: 20px;
+}
+
+.contacts__list-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    color: var(--color-white);
+    text-decoration: none;
+}
+
+.contacts__button {
+    height: 60px;
+
+    font-size: 14px;
+    line-height: 16px;
+}
+
+/**************************/
+
+
+@media screen and (min-width: 450px) {
+    .time-block__container {
+        width: 400px;
+
+        margin: 0 auto;
+    }
+
+    .models-cards {
+        align-items: center;
+    }
+
+    .model-card {
+        width: 360px;
+    }
+
+    .equips-card {
+        width: 360px;
+    }
+
+    .equips-list {
+        align-items: center;
+    }
+
+    .contacts__container {
+        width: 400px;
+
+        margin: 0 auto;
+    }
+}
+
+@media screen and (min-width: 576px) {
+    .main-banner {
+        aspect-ratio: 1024/600;
+    }
 }
